Fix footer positioning on mobile devices

--- a/website/themes/mgeco/static-src/css/components/_components.ui.scss
+++ b/website/themes/mgeco/static-src/css/components/_components.ui.scss
@@ -58,22 +58,8 @@
 }
 
 
-.c-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 200px;
-}
-
-
-.c-footer__wrapper,
 .c-footer__outer {
-  height: 100%;
-}
-
-
-.c-footer__outer {
-  background: url('/images/footer_background.png');
+  margin-bottom: $spacing;
 }
 
 
@@ -111,5 +97,25 @@
     min-height: 1000px;
     padding-right: $spacing;
     padding-bottom: 200px; // to accomodate 140px footer
+  }
+
+
+  .c-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 200px;
+  }
+
+
+  .c-footer__wrapper,
+  .c-footer__outer {
+    height: 100%;
+  }
+
+
+  .c-footer__outer {
+    margin-bottom: 0;
+    background: url('/images/footer_background.png');
   }
 }
