--- a/website/themes/mgeco/static/css/main.css
+++ b/website/themes/mgeco/static/css/main.css
@@ -1507,18 +1507,8 @@ table {
 .c-logo {
   margin-bottom: 24px; }
 
-.c-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 200px; }
-
-.c-footer__wrapper,
 .c-footer__outer {
-  height: 100%; }
-
-.c-footer__outer {
-  background: url("/images/footer_background.png"); }
+  margin-bottom: 24px; }
 
 .c-footer__inner {
   text-align: center !important;
@@ -1540,7 +1530,21 @@ table {
   .c-main-area {
     min-height: 1000px;
     padding-right: 24px;
-    padding-bottom: 200px; } }
+    padding-bottom: 200px; }
+
+  .c-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 200px; }
+
+  .c-footer__wrapper,
+  .c-footer__outer {
+    height: 100%; }
+
+  .c-footer__outer {
+    margin-bottom: 0;
+    background: url("/images/footer_background.png"); } }
 .c-contact-infos__link {
   color: #606060; }
 
